--- a/package.json
+++ b/package.json
@@ -1,18 +1,7 @@
 {
 	"name": "astro-blog-starter-template",
 	"description": "Build a personal website, blog, or portfolio with Astro.",
-	"cloudflare": {
-		"label": "Astro Framework Starter",
-		"products": [
-			"Workers"
-		],
-		"categories": [],
-		"preview_icon_url": "https://imagedelivery.net/wSMYJvS3Xw-n339CbDyDIA/394ca3c9-d351-4036-035a-9f6dfa26dd00/public",
-		"preview_image_url": "https://imagedelivery.net/wSMYJvS3Xw-n339CbDyDIA/f40a6577-eed5-4f3e-cef4-b5ef0a1be100/preview",
-		"publish": true
-	},
 	"dependencies": {
-		"@astrojs/cloudflare": "12.6.12",
 		"@astrojs/mdx": "4.3.12",
 		"@astrojs/rss": "4.0.14",
 		"@astrojs/sitemap": "3.6.0",
@@ -20,18 +9,15 @@
 		"typescript": "5.9.3"
 	},
 	"devDependencies": {
-		"@types/node": "^25.0.3",
-		"wrangler": "^4.54.0"
+		"@types/node": "^25.0.3"
 	},
 	"private": true,
 	"scripts": {
 		"astro": "astro",
 		"build": "astro build",
-		"cf-typegen": "wrangler types",
-		"check": "astro build && tsc && wrangler deploy --dry-run",
-		"deploy": "wrangler deploy",
+		"check": "astro build && tsc",
 		"dev": "astro dev",
-		"preview": "astro build && wrangler dev"
+		"preview": "astro preview"
 	},
 	"type": "module"
 }
